# SRB2P-Forked-for-UWP

./: README.md  electron-builder.yml
assets/: CMakeLists.txt
electron/assets/: AppxManifest.xml
src/: command.c  config.h.in  d_main.c  d_netcmd.c  d_netfil.c  deh_lua.c  doomdef.h  f_finale.c  g_game.c  hu_stuff.c  hu_stuff.h  info.c  info.h  lua_baselib.c  lua_consolelib.c  lua_hook.h  lua_hooklib.c  lua_hudlib.c  lua_hudlib_drawlist.c  lua_hudlib_drawlist.h  lua_script.c  m_menu.c  m_menu.h  m_misc.h  mserv.c  p_map.c  p_tick.c  p_user.c  s_sound.c  sounds.c  sounds.h  v_video.c  v_video.h  version.h  w_wad.c  w_wad.h
src/blua/: liolib.c
src/hardware/: hw_draw.c  hw_main.h
src/sdl/: i_system.c  i_video.c
src/win32/: win_main.c
uwp_build/: AppxManifest.xml.in  BUILD_INSTRUCTIONS.md  CMakeLists-UWP.txt  CMakeLists.txt  FINAL_INSTRUCTIONS.md  UWP-XBOX-INSTRUCTIONS.md  build-uwp.bat  build-uwp.ps1  create-cert.ps1  package-lock.json
uwp_build/assets/: uwp_resources.rc
uwp_build/assets/Assets/: resource.h
uwp_build/packaging/: README.md  package.ps1  xbox_deploy.bat
uwp_build/src/: CMakeLists.txt  uwp_controller.cpp  uwp_lua.cpp  uwp_main.cpp  uwp_multiplayer.cpp  uwp_storage.cpp
